# mp3-folder-rename-rs

./: .editorconfig  Cargo.toml  README.md
src/: album.rs  cli.yml  folder.rs  main.rs
