[package]
name = "mp3-folder-rename-rs"
version = "0.1.0"
authors = ["Jean-Philippe Bidegain <jean-philippe@kaizen-developments.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
id3 = "0.5.1"
mime_guess = "2.0.3"
clogger = "0.1.0"
log = "0.4.11"
exitcode = "1.1.2"